Div changes in CSS, trying to fix scrollbar on homepge

--- a/css/_variables.css
+++ b/css/_variables.css
@@ -2,16 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
 }
 
 body {
+    font-family: Arial, sans-serif;
     background-color: #1E1E1E;
     color: #F2F2F2;
     line-height: 1.6;
+    overflow-x: hidden;
 }
 
-.header-image {
+.header-image img{
     width: 100%;
     height: 600px;
     object-fit: cover;
